--- a/src/app/i18n/locales/en/global.json
+++ b/src/app/i18n/locales/en/global.json
@@ -1,6 +1,12 @@
 {
   "assignedTo": "Assigned To",
   "tasks": {
+    "confirmDate": {
+      "name": "Confirm Date",
+      "descriptionUser": "Please communicate with your host to confirm a date for your lecture.",
+      "descriptionAssignee": "Please communicate with the speaker to confirm a date for this lecture.",
+      "cta": "Confirm"
+    },
     "confirmNeedComPoster": {
       "name": "Do you need a commissioned poster?",
       "descriptionUser": "You can choose to have a free commissioned poster for your lecture or to design a poster yourself. Beware: You have no editorial control over commissioned posters.",
