feat: add subtitle for basic info

--- a/src/app/i18n/locales/en/studio.json
+++ b/src/app/i18n/locales/en/studio.json
@@ -224,6 +224,7 @@
       "message": "Good luck on your lecture! We can't wait to see what you have to offer.",
       "messageReady": "It's all set! Your lecture is ready to go. Good luck!",
       "messagePost": "Thank you for your lecture! We hope you had a fabulous time.",
+      "basic": "Basic Information",
       "status": "Status",
       "host": "Your Host",
       "hostMessage": "Your host will help you throughout your BAID Speaker journey and will host your lecture on the big day.",
@@ -231,7 +232,9 @@
       "teacherMessage": "Your teacher will help you review your content and provide feedback on your lecture.",
       "tasks": "Available Tasks",
       "tasksSub": "tasks to complete",
-      "tasksCta": "View Details"
+      "tasksCta": "View Details",
+      "files": "Available Files",
+      "tasksTitle": "Upcoming Tasks"
     },
     "tasks": {
       "empty": "You have no tasks to complete right now. Congratulations!"
