feat: add contact cta to lecture dashboard people

--- a/src/app/i18n/locales/en/studio.json
+++ b/src/app/i18n/locales/en/studio.json
@@ -239,7 +239,8 @@
       "tasks": "Available Tasks",
       "tasksSub": "tasks to complete",
       "tasksCta": "View Details",
-      "files": "Available Files"
+      "files": "Available Files",
+      "contact": "Contact"
     },
     "tasks": {
       "empty": "You have no tasks to complete right now. Congratulations!",
