feat: add empty message to unassigned lectures

--- a/src/app/i18n/locales/en/studio.json
+++ b/src/app/i18n/locales/en/studio.json
@@ -304,6 +304,7 @@
     "unassigned": {
       "name": "Title",
       "speaker": "Speaker",
+      "empty": "Congrats! No unassigned lectures.",
       "claim": "Claim Lecture"
     }
   }
