feat: allow uploading posters

--- a/src/app/i18n/locales/en/studio.json
+++ b/src/app/i18n/locales/en/studio.json
@@ -8,6 +8,9 @@
   "cancel": "Cancel",
   "confirm": "Confirm",
   "copied": "Copied!",
+  "uploadMessage": "Do not close this page while uploading.",
+  "done": "Done",
+  "tryAgain": "Try Again",
   "tasks": {
     "confirmDate": {
       "name": "Confirm Date",
