feat: make message better for next stage

--- a/src/app/i18n/locales/en/studio.json
+++ b/src/app/i18n/locales/en/studio.json
@@ -166,7 +166,7 @@
     },
     "ready": {
       "name": "Ready",
-      "details": "Your lecture is ready to go!"
+      "details": "In this stage, your lecture is ready to go!"
     },
     "completingPostTasks": {
       "name": "Completing Post-Tasks",
