feat: allow changing date and location properly

--- a/src/app/i18n/locales/en/studio.json
+++ b/src/app/i18n/locales/en/studio.json
@@ -8,6 +8,7 @@
   "cancel": "Cancel",
   "confirm": "Confirm",
   "copied": "Copied!",
+  "change": "Change",
   "uploadMessage": "Do not close this page while uploading.",
   "done": "Done",
   "tryAgain": "Try Again",
