feat: add `updatedAt` to lectures page

--- a/src/app/i18n/locales/en/studio.json
+++ b/src/app/i18n/locales/en/studio.json
@@ -241,6 +241,7 @@
     "startLecture": "Start New Lecture",
     "status": "Status: ",
     "role": "Role: ",
+    "lastUpdated": "Last Updated: ",
     "speaker": "Speaker",
     "host": "Host",
     "teacher": "Teacher",
