--- a/src/app/i18n/locales/en/studio.json
+++ b/src/app/i18n/locales/en/studio.json
@@ -257,7 +257,8 @@
       "users": "People",
       "history": "History",
       "content": "Content",
-      "statistics": "Statistics"
+      "statistics": "Statistics",
+      "others": "Others"
     },
     "dashboard": {
       "message": "Good luck on your lecture! We can't wait to see what you have to offer.",
@@ -347,6 +348,12 @@
       "videoWaiting": "Your lecture video will be available soon. Please check back later.",
       "videoAvailable": "Your lecture video is now publicly available.",
       "videoCta": "View Video"
+    },
+    "others": {
+      "delete": "Delete Lecture",
+      "cancelTitle": "Delete Lecture",
+      "cancelMessage": "Are you sure you want to delete this lecture? This action is irreversible.",
+      "cancelDescription": "You can ask your host to cancel the lecture for you."
     }
   },
   "create": {
